Added react bootstrap to the code

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
-$color: steelblue;
+$primary: #d0812c;
+$body-bg: #374166;
+$text-primary: #d3d0c4;
 
-.my-flix {
-    color: $color;
-}
+@import "~bootstrap/scss/bootstrap.scss";
