made changes to the formatting

--- a/src/Components/MovieView/movie-view.scss
+++ b/src/Components/MovieView/movie-view.scss
@@ -6,8 +6,11 @@
     border-radius: 4px;
   }
   img {
-    width: 100%;
+    width: 25%;
   }
   label {
     color: #8592ae;
+  }
+  .label-txt {
+    color: "white";
   }
