--- a/src/Components/navigation-bar/NavigationBar.scss
+++ b/src/Components/navigation-bar/NavigationBar.scss
@@ -1,10 +1,10 @@
 .search-bar {
-    color: white; // This makes the input text white
+    color: white; 
     background-color: transparent;
     border: 1px solid white;
   
     &::placeholder {
-      color: rgba(255, 255, 255, 0.6); // White-ish placeholder
+      color: rgba(255, 255, 255, 0.6);
     }
   
     &:focus {
@@ -12,14 +12,15 @@
       outline: none;
     }
   }
-
+  
   .form-control {
-    background-color: #2c3554; // your dark background
-    color: white;              // makes the text white
+    background-color: #2c3554 !important;
+    color: white !important;
   
     &::placeholder {
-      color: #ccc;             // lighter placeholder if needed
+      color: #ccc !important;
     }
   }
+  
   
   
